[package]
name = "cliptron"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["dialog-save", "global-shortcut-all", "macos-private-api", "system-tray", "window-hide", "window-set-always-on-top", "window-set-position", "window-show", "window-start-dragging"] }
clipboard-master = "3.1.3"
arboard = "3.2.0"
image = "0.24.5"
base64 = "0.13"
auto-launch = "0.4.0"
mouse_position = "0.1.2"
winapi = "0.3.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
